--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
 
 @theme {
     --color-text-primary: #1A1A1A;
+    --color-white-900: #fff2f2
 }
 
 @layer base {
@@ -18,21 +19,20 @@
         box-sizing: border-box;
     }
 
-    a,
-    a:visited,
-    a:hover,
-    a:active {
-        color: text-text-primary;
-        text-decoration: none;
-    }
-
     html {
         @apply antialiased scroll-smooth;
         font-size: 16px;
     }
 
     body {
-        @apply m-0 p-0 font-sans text-text-primary bg-white;
+        @apply m-0 p-0 font-sans text-text-primary bg-white-900;
+    }
+
+    ul,
+    ol {
+        list-style: none;
+        padding: 0;
+        margin: 0;
     }
 
     img,
@@ -40,27 +40,16 @@
         @apply max-w-full h-auto;
     }
 
-    a {
+    a,
+    a:visited,
+    a:hover,
+    a:active {
         @apply text-inherit no-underline;
     }
 
     button {
         @apply bg-transparent p-0 border-0;
     }
-}
-
-* {
-    box-sizing: border-box;
-    list-style: none;
-    background-color: #fff2f2;
-}
-
-a,
-a:visited,
-a:hover,
-a:active {
-    color: #1A1A1A;
-    text-decoration: none;
 }
 
 .container {
